--- a/TV-5.ipynb
+++ b/TV-5.ipynb
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 3,
       "metadata": {
         "id": "PP9WRaTSQJMe"
       },
@@ -149,12 +149,13 @@
         "klinik_fjoldi.loc['Hjúkrunarstjórnun HJÚ714G',['8/30/2021','9/13/2021','9/27/2021']] = [32,32,21]\n",
         "klinik_fjoldi.loc['Heimahjúkrun HJÚ711G',['8/30/2021','9/13/2021','9/27/2021','10/4/2021','11/8/2021','11/15/2021']] = [14,14,14,14,14,14]\n",
         "klinik_fjoldi.loc['Barnahjúkrun HJÚ715G',['11/8/2021','11/15/2021','1/31/2022','2/7/2022','2/14/2022','2/21/2022','2/28/2022','3/7/2022','3/14/2022','3/28/2022']] = [8,8,8,8,8,8,8,8,8,8]\n",
+        "klinik_fjoldi.loc['Bráðahjúkrun HJÚ824G',['8/30/2021','9/13/2021','9/27/2021','10/4/2021','11/8/2021','11/15/2021', '1/31/2022', '2/7/2022', '2/14/2022', '2/21/2022', '2/28/2022', '3/7/2022', '3/14/2022', '3/21/2022']] = [6,6,6,6,6,6,6,6,6,6,6,6,6,6]\n",
         "klinik_fjoldi.loc['Bráðahjúkrun HJÚ824G',['8/30/2021','9/13/2021','9/27/2021','10/4/2021','11/8/2021','11/15/2021', '1/31/2022', '2/7/2022', '2/14/2022', '2/21/2022', '2/28/2022', '3/7/2022', '3/14/2022', '3/21/2022']] = [6,6,6,6,6,6,6,6,6,6,6,6,6,6]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 4,
       "metadata": {
         "id": "Fd2F53CgQPwx"
       },
@@ -188,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 5,
       "metadata": {
         "id": "g9YUeBqiQUr5"
       },
@@ -238,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 6,
       "metadata": {
         "id": "KowUU2DgQZYa"
       },
@@ -262,7 +263,7 @@
         "# Bætum við hámarskfjölda fyrir valáfanga\n",
         "#\n",
         "###\n",
-        "# plass_a_deild.loc['val', dagsetning] = 10\n"
+        "# plass_a_deild.loc['val', dagsetning] = [10]*len(dagsetning)\n"
       ]
     },
     {
@@ -278,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -298,16 +299,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Passar ekki á 8/30/2021, mismunurinn er 1\n",
-            "Passar ekki á 9/13/2021, mismunurinn er 1\n",
-            "Passar ekki á 9/27/2021, mismunurinn er 1\n"
+            "Passar ekki á 8/16/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 8/23/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 8/30/2021, mismunurinn er 11.0\n",
+            "Passar ekki á 9/6/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 9/13/2021, mismunurinn er 11.0\n",
+            "Passar ekki á 9/20/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 9/27/2021, mismunurinn er 11.0\n",
+            "Passar ekki á 10/4/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 10/11/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 10/18/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 10/25/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 11/1/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 11/8/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 11/15/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 11/22/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 12/2/2020, mismunurinn er 10.0\n",
+            "Passar ekki á 12/9/2021, mismunurinn er 10.0\n",
+            "Passar ekki á 1/3/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 1/10/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 1/17/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 1/24/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 1/31/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 2/7/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 2/14/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 2/21/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 2/28/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 3/7/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 3/14/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 3/21/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 3/28/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 4/4/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 4/11/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 4/18/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 4/25/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 5/2/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 5/9/2022, mismunurinn er 10.0\n",
+            "Passar ekki á 5/16/2022, mismunurinn er 10.0\n"
           ]
         }
       ],
@@ -327,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -353,7 +388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -383,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -394,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -412,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 13,
       "metadata": {
         "id": "Y62zH0M5QdrZ"
       },
@@ -421,35 +456,37 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Gurobi Optimizer version 9.5.0 build v9.5.0rc5 (win64)\n",
-            "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
-            "Optimize a model with 4609 rows, 80982 columns and 265109 nonzeros\n",
-            "Model fingerprint: 0x511b5245\n",
+            "Set parameter Username\n",
+            "Academic license - for non-commercial use only - expires 2022-05-31\n",
+            "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (win64)\n",
+            "Thread count: 8 physical cores, 16 logical processors, using up to 16 threads\n",
+            "Optimize a model with 5386 rows, 80982 columns and 327269 nonzeros\n",
+            "Model fingerprint: 0x3afa1f92\n",
             "Variable types: 4022 continuous, 76960 integer (76960 binary)\n",
             "Coefficient statistics:\n",
             "  Matrix range     [1e+00, 1e+00]\n",
             "  Objective range  [1e+00, 1e+00]\n",
             "  Bounds range     [1e+00, 3e+01]\n",
             "  RHS range        [1e+00, 3e+01]\n",
-            "Presolve removed 2923 rows and 73442 columns\n",
-            "Presolve time: 0.38s\n",
-            "Presolved: 1686 rows, 7540 columns, 27001 nonzeros\n",
+            "Presolve removed 3709 rows and 73442 columns\n",
+            "Presolve time: 0.14s\n",
+            "Presolved: 1677 rows, 7540 columns, 22353 nonzeros\n",
             "Variable types: 0 continuous, 7540 integer (7540 binary)\n",
             "\n",
-            "Root relaxation: interrupted, 0 iterations, 0.01 seconds (0.00 work units)\n",
+            "Root relaxation: infeasible, 412 iterations, 0.01 seconds (0.00 work units)\n",
             "\n",
             "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
             " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
             "\n",
-            "H    0     0                     186.0000000  186.00000  0.00%     -    0s\n",
+            "     0     0 infeasible    0               - infeasible      -     -    0s\n",
             "\n",
-            "Explored 1 nodes (0 simplex iterations) in 0.60 seconds (0.15 work units)\n",
-            "Thread count was 8 (of 8 available processors)\n",
+            "Explored 1 nodes (412 simplex iterations) in 0.23 seconds (0.18 work units)\n",
+            "Thread count was 16 (of 16 available processors)\n",
             "\n",
-            "Solution count 1: 186 \n",
+            "Solution count 0\n",
             "\n",
-            "Optimal solution found (tolerance 1.00e-04)\n",
-            "Best objective 1.860000000000e+02, best bound 1.860000000000e+02, gap 0.0000%\n"
+            "Model is infeasible\n",
+            "Best objective -, best bound -, gap -\n"
           ]
         }
       ],
@@ -516,7 +553,8 @@
         ")\n",
         "\n",
         "\n",
-        "\n",
+        "# add contraints for each day in the week for each deild and each klinik \n",
+        "m.addConstrs(gp.quicksum(x[s,c,d,k] for s in nemendur) <= 1 for c in namskeid for k in deild[c] for d in dagsetning)\n",
         "\n",
         "\n",
         "\n",
@@ -528,9 +566,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 14,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "AttributeError",
+          "evalue": "Unable to retrieve attribute 'X'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[1;32mc:\\Skoli\\Vor2022\\Aðgerðagreining\\Verkefni\\Vika13\\TV-5.ipynb Cell 16'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Skoli/Vor2022/A%C3%B0ger%C3%B0agreining/Verkefni/Vika13/TV-5.ipynb#ch0000015?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m (namskeid\u001b[39m+\u001b[39mvalnamskeid_nemendur[s]):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Skoli/Vor2022/A%C3%B0ger%C3%B0agreining/Verkefni/Vika13/TV-5.ipynb#ch0000015?line=5'>6</a>\u001b[0m     \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m deild[c]:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Skoli/Vor2022/A%C3%B0ger%C3%B0agreining/Verkefni/Vika13/TV-5.ipynb#ch0000015?line=6'>7</a>\u001b[0m         \u001b[39mif\u001b[39;00m x[s,c,d,k]\u001b[39m.\u001b[39;49mX\u001b[39m>\u001b[39m\u001b[39m0\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Skoli/Vor2022/A%C3%B0ger%C3%B0agreining/Verkefni/Vika13/TV-5.ipynb#ch0000015?line=7'>8</a>\u001b[0m             cnt \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Skoli/Vor2022/A%C3%B0ger%C3%B0agreining/Verkefni/Vika13/TV-5.ipynb#ch0000015?line=8'>9</a>\u001b[0m \u001b[39mif\u001b[39;00m cnt \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m [\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m]:\n",
+            "File \u001b[1;32msrc\\gurobipy\\var.pxi:125\u001b[0m, in \u001b[0;36mgurobipy.Var.__getattr__\u001b[1;34m()\u001b[0m\n",
+            "File \u001b[1;32msrc\\gurobipy\\var.pxi:153\u001b[0m, in \u001b[0;36mgurobipy.Var.getAttr\u001b[1;34m()\u001b[0m\n",
+            "File \u001b[1;32msrc\\gurobipy\\attrutil.pxi:100\u001b[0m, in \u001b[0;36mgurobipy.__getattr\u001b[1;34m()\u001b[0m\n",
+            "\u001b[1;31mAttributeError\u001b[0m: Unable to retrieve attribute 'X'"
+          ]
+        }
+      ],
       "source": [
         "for s in nemendur:\n",
         "    for d in dagsetning: \n",
@@ -546,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -562,7 +615,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": null,
       "metadata": {
         "id": "09YcBza2Qtf5"
       },
