--- a/TV-5.ipynb
+++ b/TV-5.ipynb
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 39,
       "metadata": {
         "id": "PP9WRaTSQJMe"
       },
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 40,
       "metadata": {
         "id": "Fd2F53CgQPwx"
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 41,
       "metadata": {
         "id": "g9YUeBqiQUr5"
       },
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 42,
       "metadata": {
         "id": "KowUU2DgQZYa"
       },
@@ -278,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -327,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
@@ -353,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
@@ -383,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -394,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [
         {
@@ -412,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 51,
       "metadata": {
         "id": "Y62zH0M5QdrZ"
       },
@@ -423,8 +423,8 @@
           "text": [
             "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (win64)\n",
             "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
-            "Optimize a model with 16814 rows, 71251 columns and 288931 nonzeros\n",
-            "Model fingerprint: 0xc24d9aa9\n",
+            "Optimize a model with 17246 rows, 71251 columns and 289795 nonzeros\n",
+            "Model fingerprint: 0xeaceb849\n",
             "Variable types: 4022 continuous, 67229 integer (67229 binary)\n",
             "Coefficient statistics:\n",
             "  Matrix range     [1e+00, 1e+00]\n",
@@ -432,9 +432,9 @@
             "  Bounds range     [1e+00, 3e+01]\n",
             "  RHS range        [1e+00, 3e+01]\n",
             "Presolve removed 2200 rows and 62519 columns\n",
-            "Presolve time: 0.09s\n",
+            "Presolve time: 0.08s\n",
             "\n",
-            "Explored 0 nodes (0 simplex iterations) in 0.34 seconds (0.07 work units)\n",
+            "Explored 0 nodes (0 simplex iterations) in 0.26 seconds (0.07 work units)\n",
             "Thread count was 1 (of 8 available processors)\n",
             "\n",
             "Solution count 0\n",
@@ -458,7 +458,7 @@
         "m.addConstrs(\n",
         "    x[s,'Bráðahjúkrun HJÚ0AVM',d2,'val'] <= x[s,'Bráðahjúkrun HJÚ824G',d1,'brada']\n",
         "    for s in nemendur if 'Bráðahjúkrun HJÚ0AVM' in valnamskeid_nemendur[s]\n",
-        "    for d1 in dagsetning for d2 in dagsetning[max(d1, jolaprof):]\n",
+        "    for i, d1 in enumerate(dagsetning) for d2 in dagsetning[max(i, jolaprof):]\n",
         ")\n",
         "\n",
         "# Hér eru nemendur skráðir í áfangana\n",
@@ -521,7 +521,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -539,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -555,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "metadata": {
         "id": "09YcBza2Qtf5"
       },
