veit ekki neitt

--- a/TV-5.ipynb
+++ b/TV-5.ipynb
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 2,
       "metadata": {
         "id": "PP9WRaTSQJMe"
       },
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 3,
       "metadata": {
         "id": "Fd2F53CgQPwx"
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 4,
       "metadata": {
         "id": "g9YUeBqiQUr5"
       },
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 5,
       "metadata": {
         "id": "KowUU2DgQZYa"
       },
@@ -278,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -327,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -353,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -383,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -394,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -412,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 12,
       "metadata": {
         "id": "Y62zH0M5QdrZ"
       },
@@ -421,20 +421,22 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "Set parameter Username\n",
+            "Academic license - for non-commercial use only - expires 2023-03-30\n",
             "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (win64)\n",
             "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
-            "Optimize a model with 17246 rows, 71251 columns and 289795 nonzeros\n",
-            "Model fingerprint: 0xeaceb849\n",
-            "Variable types: 4022 continuous, 67229 integer (67229 binary)\n",
+            "Optimize a model with 17292 rows, 80845 columns and 289482 nonzeros\n",
+            "Model fingerprint: 0x3e2de1d4\n",
+            "Variable types: 3885 continuous, 76960 integer (76960 binary)\n",
             "Coefficient statistics:\n",
             "  Matrix range     [1e+00, 1e+00]\n",
-            "  Objective range  [0e+00, 0e+00]\n",
+            "  Objective range  [1e+00, 1e+00]\n",
             "  Bounds range     [1e+00, 3e+01]\n",
             "  RHS range        [1e+00, 3e+01]\n",
-            "Presolve removed 2200 rows and 62519 columns\n",
-            "Presolve time: 0.08s\n",
+            "Presolve removed 2453 rows and 72113 columns\n",
+            "Presolve time: 0.09s\n",
             "\n",
-            "Explored 0 nodes (0 simplex iterations) in 0.26 seconds (0.07 work units)\n",
+            "Explored 0 nodes (0 simplex iterations) in 0.23 seconds (0.07 work units)\n",
             "Thread count was 1 (of 8 available processors)\n",
             "\n",
             "Solution count 0\n",
@@ -450,7 +452,7 @@
         "jolaprof = 21\n",
         "m = gp.Model(\"Klínik\") # frumstilla Gurobi líkan\n",
         "\n",
-        "x = m.addVars([(s,c,d,k) for s in nemendur for c in (namskeid+valnamskeid_nemendur[s]) for d in dagsetning for k in deild[c]], vtype=gp.GRB.BINARY)\n",
+        "x = m.addVars([(s,c,d,k) for s in nemendur for c in (namskeid+valnamskeid) for d in dagsetning for k in deild[c]], vtype=gp.GRB.BINARY)\n",
         "\n",
         "\n",
         "\n",
@@ -474,14 +476,14 @@
         ")\n",
         "m.addConstrs(\n",
         "    gp.quicksum(x[s,c,d,k] for k in deild[c] for d in dagsetning[jolaprof:])\n",
-        "    == [0,1] for s in nemendur for c in valnamskeid_nemendur[s]\n",
+        "    == 0 for s in nemendur for c in valnamskeid if c not in valnamskeid_nemendur[s]\n",
         ")\n",
         "\n",
         "\n",
-        "m.addConstrs(\n",
-        "    gp.quicksum(x[s,c,d,k] for c in valnamskeid_nemendur[s] for d in dagsetning[jolaprof:] for k in deild[c]) \n",
-        "    == min(2, len(valnamskeid_nemendur[s])) for s in nemendur\n",
-        ")\n",
+        "# m.addConstrs(\n",
+        "#     gp.quicksum(x[s,c,d,k] for c in valnamskeid_nemendur[s] for d in dagsetning[jolaprof:] for k in deild[c]) \n",
+        "#     == min(2, len(valnamskeid_nemendur[s])) for s in nemendur\n",
+        "# )\n",
         "\n",
         "\n",
         "# m.addConstrs(\n",
@@ -509,21 +511,31 @@
         "\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "# m.setObjective(gp.quicksum(x[s,c,d,k] for s in nemendur for c in valnamskeid_nemendur[s] for d in dagsetning for k in deild[c]), gp.GRB.MAXIMIZE)\n",
-        "\n",
+        "m.setObjective(gp.quicksum(gp.quicksum(x[s,c,d,k] for s in nemendur for k in deild[c]) for d in dagsetning for c in valnamskeid), gp.GRB.MINIMIZE)\n",
         "\n",
         "m.optimize()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "AttributeError",
+          "evalue": "Unable to retrieve attribute 'X'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[1;32md:\\Skóli\\Vor\\Aðgerðar\\TV5\\TV-5.ipynb Cell 16'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000015?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m (namskeid\u001b[39m+\u001b[39mvalnamskeid_nemendur[s]):\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000015?line=5'>6</a>\u001b[0m     \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m deild[c]:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000015?line=6'>7</a>\u001b[0m         \u001b[39mif\u001b[39;00m x[s,c,d,k]\u001b[39m.\u001b[39;49mX\u001b[39m>\u001b[39m\u001b[39m0\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000015?line=7'>8</a>\u001b[0m             cnt \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000015?line=8'>9</a>\u001b[0m \u001b[39mif\u001b[39;00m cnt \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m [\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m]:\n",
+            "File \u001b[1;32msrc\\gurobipy\\var.pxi:125\u001b[0m, in \u001b[0;36mgurobipy.Var.__getattr__\u001b[1;34m()\u001b[0m\n",
+            "File \u001b[1;32msrc\\gurobipy\\var.pxi:153\u001b[0m, in \u001b[0;36mgurobipy.Var.getAttr\u001b[1;34m()\u001b[0m\n",
+            "File \u001b[1;32msrc\\gurobipy\\attrutil.pxi:100\u001b[0m, in \u001b[0;36mgurobipy.__getattr\u001b[1;34m()\u001b[0m\n",
+            "\u001b[1;31mAttributeError\u001b[0m: Unable to retrieve attribute 'X'"
+          ]
+        }
+      ],
       "source": [
         "for s in nemendur:\n",
         "    for d in dagsetning: \n",
