--- a/TV-5.ipynb
+++ b/TV-5.ipynb
@@ -457,71 +457,60 @@
         "# útfærsla á líkani með Gurobi\n",
         "namskeid = klinik_fjoldi.index.tolist()\n",
         "jolaprof = 21\n",
+        "sidasti_dagur = -6\n",
         "m = gp.Model(\"Klínik\") # frumstilla Gurobi líkan\n",
         "\n",
         "x = m.addVars([(s,c,d,k) for s in nemendur for c in (namskeid+valnamskeid) for d in dagsetning for k in deild[c]], vtype=gp.GRB.BINARY)\n",
         "\n",
         "\n",
+        "brada_dag = [\"8/30/2021\",\"9/13/2021\",\"9/27/2021\",\"10/4/2021\",\"11/8/2021\",\"11/15/2021\"]\n",
+        "# Nemandi þarf að hafa lokið námskeiðinu bráðahjúkrun áður en hann tekur framhaldsnámskeiðiðs\n",
+        "m.addConstrs(gp.quicksum(x[s,'Bráðahjúkrun HJÚ824G',l,'brada'] for l in brada_dag) == 1 for s in nemendur if 'Bráðahjúkrun HJÚ0AVM' in valnamskeid_nemendur[s][:2])\n",
+        "\n",
+        "\n",
         "# Hér eru nemendur skráðir í áfangana\n",
-        "brada_dag = [\"8/30/2021\",\"9/13/2021\",\"9/27/2021\",\"10/4/2021\",\"11/8/2021\",'11/15/2021']\n",
-        "\n",
-        "\n",
         "m.addConstrs(\n",
-        "    gp.quicksum(x[s,c,d,k] for d in dagsetning for k in deild[c]) \n",
+        "    gp.quicksum(x[s,c,d,k] for d in dagsetning[:sidasti_dagur - (1 if c in ['Hjúkrunarstjórnun HJÚ714G','Barnahjúkrun HJÚ715G'] else 0)] for k in deild[c]) \n",
         "    == nemendur_skraning.loc[s,c] for s in nemendur for c in namskeid\n",
         ")\n",
         "\n",
-        "m.addConstrs(gp.quicksum(x[s,'Bráðahjúkrun HJÚ824G',l,'brada'] for l in brada_dag) == 1 for s in nemendur if 'Bráðahjúkrun HJÚ0AVM' in valnamskeid_nemendur[s]) #Nemandi þarf að hafa lokið námskeiðinu b´raðahjúkrun áður en hann tekur framhaldsnámskeiðið\n",
+        "\n",
+        "m.addConstrs(\n",
+        "    x[s,cc,dagsetning[i+1],kk] == 0 if x[s,c,d,k] else [0,1] for cc in (namskeid+valnamskeid) for kk in deild[cc]\n",
+        "    for s in nemendur for c in ['Hjúkrunarstjórnun HJÚ714G','Barnahjúkrun HJÚ715G'] for (i, d) in enumerate(dagsetning[:sidasti_dagur-1]) for k in deild[c]\n",
+        "    \n",
+        ")\n",
+        "\n",
         "\n",
         "\n",
         "# Hér eru nemendur skráðir í valáfangana\n",
         "m.addConstrs(\n",
-        "    gp.quicksum(x[s,c,d,k] for d in dagsetning[jolaprof:] for c in valnamskeid_nemendur[s] for k in deild[c]) \n",
-        "    == min(2, len(valnamskeid_nemendur[s])) for s in nemendur\n",
-        ")\n",
-        "m.addConstrs(\n",
-        "    gp.quicksum(x[s,c,d,k] for k in deild[c] for d in dagsetning[jolaprof:])\n",
-        "    == [0,1] for s in nemendur for c in valnamskeid_nemendur[s]\n",
-        ")\n",
-        "\n",
-        "m.addConstrs(\n",
-        "    gp.quicksum(x[s,c,d,k] for c in valnamskeid_nemendur[s] for d in dagsetning[jolaprof:] for k in deild[c]) \n",
-        "    == min(2, len(valnamskeid_nemendur[s])) for s in nemendur\n",
-        ")\n",
-        "\n",
-        "## framhalds val\n",
-        "\n",
-        "m.addConstrs(\n",
-        "    gp.quicksum(x[s,'Bráðahjúkrun HJÚ0AVM',d,'val'] for d in dagsetning[21:29]) \n",
-        "    == 1 for s in nemendur\n",
+        "    gp.quicksum(x[s,c,d,k] for d in dagsetning[jolaprof:sidasti_dagur] for k in deild[c])\n",
+        "    == fjoldi_val[c]*(1 if c in valnamskeid_nemendur[s][:2] else 0) for s in nemendur for c in valnamskeid\n",
         ")\n",
         "\n",
         "\n",
         "# Hver nemandi getur bara tekið einn áfanga að hámarki fyrir hverja dagsetningu\n",
         "m.addConstrs(\n",
         "    gp.quicksum(x[s,c,d,k] for c in (namskeid+valnamskeid_nemendur[s]) for k in deild[c]) \n",
-        "    == [0,1] for d in dagsetning for s in nemendur\n",
+        "    == [0,1] for d in dagsetning[:sidasti_dagur] for s in nemendur\n",
         ")\n",
         "\n",
         "# Hver klíník hefur hámarks pláss\n",
         "m.addConstrs(\n",
         "    gp.quicksum(x[s,c,d,k] for s in nemendur for k in deild[c]) \n",
-        "    == [0, klinik_fjoldi.loc[c,d]] for c in namskeid for d in dagsetning\n",
+        "    == [0, klinik_fjoldi.loc[c,d]] for c in namskeid for d in dagsetning[:sidasti_dagur]\n",
         ")\n",
         "\n",
         "# Hver deild hefur hámarks pláss\n",
         "m.addConstrs(\n",
         "    gp.quicksum(x[s,c,d,k] for s in nemendur) \n",
-        "    == [0, plass_a_deild.loc[k,d]] for c in namskeid for k in deild[c] for d in dagsetning\n",
+        "    == [0, plass_a_deild.loc[k,d]] for c in namskeid for k in deild[c] for d in dagsetning[:sidasti_dagur]\n",
         ")\n",
         "\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "m.setObjective(gp.quicksum(gp.quicksum(x[s,c,d,k] for s in nemendur  for d in dagsetning  for k in deild[c]) for c in valnamskeid), gp.GRB.MINIMIZE)\n",
+        "# m.setObjective(gp.quicksum(gp.quicksum(x[s,c,d,k] for s in nemendur for d in dagsetning[jolaprof:] for k in deild[c]) for c in valnamskeid), gp.GRB.MINIMIZE)\n",
         "\n",
         "m.optimize()"
       ]
